[tool.poetry]
name = "padoru"
version = "1.0.0"
description = "Padoru!! Padoruuu!!"
authors = ["Onirei <occult.remi@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.11"
pygame = "^2.1.0"
numpy = "^1.21.5"
opencv-python = "^4.5.4"
Pillow = "^8.4.0"

[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
